Fix list overflow

--- a/styles/base/_layout.scss
+++ b/styles/base/_layout.scss
@@ -13,7 +13,7 @@ main {
   height: calc(100% - #{$header-height} - #{$footer-height});
   padding: 1rem 0;
   box-sizing: border-box;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 h1,
